<?xml version="1.0"?>
<package format="3">
  <name>robosense_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>
    Gazebo plugin to provide simulated data from Robosense laser scanners.
  </description>

  <license>BSD</license>
  <author>Thomas SIMON</author>
  <maintainer email="thomas.simon@ensta-paris.fr">Thomas SIMON</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>ros_gz</depend>
  

  <export>
  </export>

</package>
