<?xml version="1.0"?>
<package format="3">
  <name>smb_description</name>
  <version>1.2.0</version>
  <description>Super mega bot description</description>
  <maintainer email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</maintainer>
  <license>BSD</license>

  <url type="website"> https://bitbucket.org/leggedrobotics/smb_common </url>
  <author email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rosidl_default_generators</depend>
  <depend>ros2_control</depend>
  <depend>ros_gz</depend>
  <exec_depend>robosense_description</exec_depend>
  <exec_depend>robosense_gazebo_plugins</exec_depend>
</package>
