<?xml version="1.0"?>

<package format="3">

  <name>smb_lowlevel_controller</name>
  <version>2.2.0</version>
  <description>The supermegabot lowlevel controller package</description>
  
  <license>Proprietary</license>
  <maintainer email="tsandy@mavt.ethz.ch">Tim Sandy</maintainer>
  <author email="tsandy@mavt.ethz.ch">Tim Sandy</author>
  <author email="oharley@ethz.ch">Oliver Harley</author>
  <url type="website">https://bitbucket.org/leggedrobotics/smb_lowlevel_controller/smb_lowlevel_controller</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>urdf</depend>
  <depend>smb_driver</depend>
  <depend>rcutils</depend>
  <depend>control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <exec_depend>smb_description</exec_depend>
</package>
